추가 미션 - 가장 빠른 도착 경로 타입 추가 (#510)
* test(path): 가장 빠른 도착 경로 조회 인수 테스트를 추가했다.

우선 하나의 노선 사용하는 경우 테스트만 추가했다.

* fix(test): 픽스처의 minor typo 를 수정했다.

* feat(line): 임시 클래스들을 추가헸다.

* feat(path): 그래프에서 모든 경로를 조회하는 메서드를 추가했다.

* feat(path): 임시 클래스들을 추가했다.

* feat(path): 그래프 간선 구간 도착 시각을 계산하는 메서드를 구현했다.

* feat(line): 구간까지 걸리는 시간을 계산한다.

* feat(line): 구간 종착역까지 소요되는 시간을 계산한다.

* feat(line): 가장 빠른 도착 경로 도메인 객체들을 구현했다.

* feat(line): `Paths` 라는 일급 컬렉션 객체를 추가했다.

`Paths` 는 가장 빨리 도착하는 경로를 조회할 수 있는 기능이 있다.

* feat(path): 가장 빠른 경로 조회 서비스 메서드를 구현했다.

* test(path): 가장 빠른 도착 경로 인수 테스트 (노선 하나만 사용하는 경우) 통과한다.

* test(path): 가장 빠른 도착 경로 인수 테스트 (환승 포함) 통과한다.

* refactor(favorite): 즐겨찾기 패키지에서 임시 클래스를 제거헸다.

* refactor(acceptance-tests): 새로운 경로를 사용하는 인수 테스트만 남겼다.

* refactor(fare): fare 패키지의 이전 클래스들을 정리했다.

* refactor(path): path 패키지의 이전 클래스들을 정리했다.

* refactor(path): line 패키지의 이전 클래스들을 정리했다.

* refactor(test): 사용 안 하는 인수 테스트를 제거했다.

* fix(favorite): `FavoriteService` 테스트가 새 클래스들을 사용하도록 수정했다.

* refactor(line): `line` 패키지 클래스 이름을 정리하고 라우트를 원상 복귀시켰다.

* refactor(path): `path` 패키지 클래스 이름을 정리하고 라우트를 원상 복귀시켰다.

* refactor(fare): `fare` 패키지 클래스 이름을 정리했다.

* refactor(test): 인수 테스트 gherkin step 명칭들을 원상 복귀시켰다.

* docs(path): 가장 빠른 경로 조회 제약 사항을 문서화했다.

* chore(fare): 사용 안 하는 코드를 제거했다.

* fix(line): 테스트 클래스 이름을 고쳤다.