@@ -11,17 +11,18 @@ import java.util.List;
 import java.util.Optional;
 import nextstep.auth.domain.LoginMember;
 import nextstep.auth.exception.AuthorizationException;
-import nextstep.favorite.application.*;
+import nextstep.favorite.application.FavoriteMapper;
+import nextstep.favorite.application.FavoriteService;
 import nextstep.favorite.application.dto.FavoriteRequest;
 import nextstep.favorite.domain.Favorite;
 import nextstep.favorite.domain.FavoriteRepository;
 import nextstep.favorite.exception.FavoritePathNotFoundException;
 import nextstep.member.application.MemberService;
 import nextstep.member.domain.Member;
-import nextstep.subway.line.domain.Line;
 import nextstep.subway.path.application.PathService;
 import nextstep.subway.path.application.dto.PathRequest;
 import nextstep.subway.path.application.dto.PathResponse;
+import nextstep.subway.path.domain.LineSectionEdge;
 import nextstep.subway.path.domain.Path;
 import nextstep.subway.station.domain.Station;
 import org.junit.jupiter.api.DisplayName;
@@ -48,11 +49,12 @@ class FavoriteServiceTest {
   @Test
   void createFavorite() {
     List<Station> stations = Arrays.asList(교대역(), 강남역(), 양재역());
-    List<Line> lines = Arrays.asList(이호선2(), 신분당선2());
+    List<LineSectionEdge> edges =
+        List.of(LineSectionEdge.of(강남_역삼_구간(), 이호선()), LineSectionEdge.of(강남_판교_구간(), 신분당선()));
     FavoriteRequest request = FavoriteRequest.of(교대역().getId(), 양재역().getId());
     given(memberService.findMemberByEmail(member.getEmail())).willReturn(member);
     given(pathService.findPath(any(PathRequest.class), any(LoginMember.class)))
-        .willReturn(PathResponse.of(Path.of(stations, lines, 10, 10), 0L));
+        .willReturn(PathResponse.of(Path.of(stations, edges), 0L));
 
     favoriteService.createFavorite(request, loginMember);
 
