@@ -3,11 +3,13 @@ package nextstep.subway.unit.fare.domain;
 import static nextstep.Fixtures.*;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 import nextstep.subway.fare.domain.DistanceSurchargePolicy;
 import nextstep.subway.fare.domain.OverlappedSurchargePolicy;
+import nextstep.subway.line.domain.Line;
+import nextstep.subway.line.domain.LineSection;
+import nextstep.subway.path.domain.LineSectionEdge;
 import nextstep.subway.path.domain.Path;
 import nextstep.subway.station.domain.Station;
 import org.junit.jupiter.api.DisplayName;
@@ -22,8 +24,13 @@ class OverlappedSurchargePolicyTest {
   @ParameterizedTest
   @MethodSource
   void calculateSurcharge(int distance, int expectedFare) {
-    List<Station> stations = Arrays.asList(교대역(), 강남역());
-    Path path = Path.of(stations, List.of(이호선2()), distance, 10);
+    Station 교대역 = 교대역();
+    Station 강남역 = 강남역();
+    Line 이호선 = 이호선();
+    Path path =
+        Path.of(
+            List.of(교대역, 강남역),
+            List.of(LineSectionEdge.of(LineSection.of(교대역, 강남역, distance, 5), 이호선)));
     OverlappedSurchargePolicy policy =
         new OverlappedSurchargePolicy(
             new DistanceSurchargePolicy(10, 50, 100, 5),
